--- a/Codename CHOMPS/iPhoneMainStoryboard.storyboard
+++ b/Codename CHOMPS/iPhoneMainStoryboard.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="YNP-kX-WwT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C3012" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="YNP-kX-WwT">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller - Home-->
+        <!--Home View Controller - Home-->
         <scene sceneID="dsN-Ke-DLq">
             <objects>
-                <tableViewController storyboardIdentifier="Home" title="Home" id="Y7c-ts-Kf9" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="Home" title="Home" id="Y7c-ts-Kf9" customClass="HomeViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="tv2-IH-hk2">
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -24,9 +24,15 @@
                             </tableViewCell>
                         </prototypes>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="k6h-KK-8Fe"/>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="k6h-KK-8Fe">
+                        <barButtonItem key="rightBarButtonItem" systemItem="camera" id="gr3-2T-E6B">
+                            <connections>
+                                <action selector="launchCamera:" destination="Y7c-ts-Kf9" id="SN2-Ll-wih"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
-                        <segue destination="oCM-Dw-4p0" kind="modal" modalTransitionStyle="coverVertical" id="8a4-xv-MjK"/>
+                        <segue destination="oCM-Dw-4p0" kind="modal" identifier="" modalTransitionStyle="coverVertical" id="8a4-xv-MjK"/>
                         <segue destination="Ijt-kR-EQj" kind="push" id="tMZ-Ax-oON"/>
                     </connections>
                 </tableViewController>
@@ -64,10 +70,10 @@
             </objects>
             <point key="canvasLocation" x="1049" y="-644"/>
         </scene>
-        <!--View Controller - Camera-->
+        <!--Camera View Controller - Camera-->
         <scene sceneID="1Cc-Hl-sfs">
             <objects>
-                <viewController storyboardIdentifier="Camera" title="Camera" id="oCM-Dw-4p0" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Camera" title="Camera" id="oCM-Dw-4p0" customClass="CameraViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="FHx-3o-f5p">
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -98,6 +104,17 @@
             <point key="canvasLocation" x="-445" y="20"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="CameraViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CameraViewController.h"/>
+        </class>
+        <class className="HomeViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/HomeViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="launchCamera:"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
