--- a/Codename CHOMPS/iPhoneMainStoryboard.storyboard
+++ b/Codename CHOMPS/iPhoneMainStoryboard.storyboard
@@ -32,7 +32,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <segue destination="oCM-Dw-4p0" kind="modal" identifier="" modalTransitionStyle="coverVertical" id="8a4-xv-MjK"/>
+                        <segue destination="oCM-Dw-4p0" kind="modal" identifier="cameraSegue" modalTransitionStyle="coverVertical" animates="NO" id="8a4-xv-MjK"/>
                         <segue destination="Ijt-kR-EQj" kind="push" id="tMZ-Ax-oON"/>
                     </connections>
                 </tableViewController>
@@ -77,11 +77,47 @@
                     <view key="view" contentMode="scaleToFill" id="FHx-3o-f5p">
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9jj-nn-6Jk">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="takePicture:" destination="oCM-Dw-4p0" eventType="touchUpInside" id="Np4-vS-8er"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cdx-hh-aub">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Done">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="isDoneTakingPictures:" destination="oCM-Dw-4p0" eventType="touchUpInside" id="XG3-dJ-MN5"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="cdx-hh-aub" firstAttribute="bottom" secondItem="FHx-3o-f5p" secondAttribute="bottom" type="default" id="7bX-6d-S9w"/>
+                            <constraint firstItem="9jj-nn-6Jk" firstAttribute="top" secondItem="FHx-3o-f5p" secondAttribute="top" type="default" id="RAq-UO-v7a"/>
+                            <constraint firstItem="cdx-hh-aub" firstAttribute="leading" secondItem="FHx-3o-f5p" secondAttribute="leading" type="default" id="S5F-IW-DqB"/>
+                            <constraint firstItem="9jj-nn-6Jk" firstAttribute="centerY" secondItem="FHx-3o-f5p" secondAttribute="centerY" type="default" id="SmU-fk-cPf"/>
+                            <constraint firstItem="9jj-nn-6Jk" firstAttribute="trailing" secondItem="FHx-3o-f5p" secondAttribute="trailing" type="default" id="h3J-xW-NhF"/>
+                            <constraint firstItem="9jj-nn-6Jk" firstAttribute="leading" secondItem="FHx-3o-f5p" secondAttribute="leading" type="default" id="mb4-3p-Xsb"/>
+                            <constraint firstItem="cdx-hh-aub" firstAttribute="trailing" secondItem="FHx-3o-f5p" secondAttribute="trailing" type="default" id="seH-EZ-VOO"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="TaL-V2-Axf"/>
                     <connections>
-                        <segue destination="bg7-mh-8EH" kind="modal" modalTransitionStyle="coverVertical" animates="NO" id="Djz-aq-MEE"/>
+                        <segue destination="bg7-mh-8EH" kind="modal" identifier="toImagePicker" modalTransitionStyle="flipHorizontal" id="Djz-aq-MEE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Grm-DM-4pA" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -107,12 +143,19 @@
     <classes>
         <class className="CameraViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/CameraViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="isDoneTakingPictures:"/>
+                <relationship kind="action" name="takePicture:"/>
+            </relationships>
         </class>
         <class className="HomeViewController" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/HomeViewController.h"/>
             <relationships>
                 <relationship kind="action" name="launchCamera:"/>
             </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
