--- a/Codename CHOMPS/iPhoneMainStoryboard.storyboard
+++ b/Codename CHOMPS/iPhoneMainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C3012" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="YNP-kX-WwT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="YNP-kX-WwT">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -55,16 +55,67 @@
             </objects>
             <point key="canvasLocation" x="593" y="20"/>
         </scene>
-        <!--View Controller - Image Picker-->
+        <!--Image Picker Controller - Image Picker-->
         <scene sceneID="Evf-JB-GIk">
             <objects>
-                <viewController storyboardIdentifier="ImagePicker" title="Image Picker" id="bg7-mh-8EH" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ImagePicker" title="Image Picker" id="bg7-mh-8EH" customClass="ImagePickerController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="NnM-zl-yGZ">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="44W-Pp-EsB">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="yX1-NH-o3b">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="ZPJ-Bv-eFi">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="44W-Pp-EsB" firstAttribute="top" secondItem="NnM-zl-yGZ" secondAttribute="top" type="default" id="Fgr-Y4-Xpu"/>
+                            <constraint firstItem="44W-Pp-EsB" firstAttribute="leading" secondItem="NnM-zl-yGZ" secondAttribute="leading" type="default" id="IRb-tP-jab"/>
+                            <constraint firstItem="44W-Pp-EsB" firstAttribute="trailing" secondItem="NnM-zl-yGZ" secondAttribute="trailing" type="default" id="gMr-Se-B8G"/>
+                            <constraint firstItem="44W-Pp-EsB" firstAttribute="bottom" secondItem="NnM-zl-yGZ" secondAttribute="bottom" type="default" id="muY-Yb-Z9D"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="7Gk-Ye-8MM"/>
+                    <toolbarItems>
+                        <barButtonItem style="done" systemItem="camera" id="l4Z-Jq-Sa4">
+                            <color key="tintColor" red="0.30914267921498906" green="0.50406952949829797" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <action selector="addMoreImages:" destination="bg7-mh-8EH" id="EKL-a2-tRW"/>
+                            </connections>
+                        </barButtonItem>
+                    </toolbarItems>
+                    <navigationItem key="navigationItem" id="7Gk-Ye-8MM">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="hVs-jJ-rH3">
+                            <connections>
+                                <action selector="cancel:" destination="bg7-mh-8EH" id="adB-MM-dkn"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="save" id="2Fd-Tf-jPv">
+                            <connections>
+                                <action selector="saveSelectedImages:" destination="bg7-mh-8EH" id="ZWy-am-Qdq"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="blackOpaque" prompted="NO"/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics" barStyle="blackOpaque"/>
+                    <connections>
+                        <outlet property="imageCollectionView" destination="44W-Pp-EsB" id="9bp-p3-Qnk"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NOa-GR-qGd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -78,19 +129,6 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9jj-nn-6Jk">
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="takePicture:" destination="oCM-Dw-4p0" eventType="touchUpInside" id="Np4-vS-8er"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cdx-hh-aub">
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Done">
@@ -107,11 +145,7 @@
                         </subviews>
                         <constraints>
                             <constraint firstItem="cdx-hh-aub" firstAttribute="bottom" secondItem="FHx-3o-f5p" secondAttribute="bottom" type="default" id="7bX-6d-S9w"/>
-                            <constraint firstItem="9jj-nn-6Jk" firstAttribute="top" secondItem="FHx-3o-f5p" secondAttribute="top" type="default" id="RAq-UO-v7a"/>
                             <constraint firstItem="cdx-hh-aub" firstAttribute="leading" secondItem="FHx-3o-f5p" secondAttribute="leading" type="default" id="S5F-IW-DqB"/>
-                            <constraint firstItem="9jj-nn-6Jk" firstAttribute="centerY" secondItem="FHx-3o-f5p" secondAttribute="centerY" type="default" id="SmU-fk-cPf"/>
-                            <constraint firstItem="9jj-nn-6Jk" firstAttribute="trailing" secondItem="FHx-3o-f5p" secondAttribute="trailing" type="default" id="h3J-xW-NhF"/>
-                            <constraint firstItem="9jj-nn-6Jk" firstAttribute="leading" secondItem="FHx-3o-f5p" secondAttribute="leading" type="default" id="mb4-3p-Xsb"/>
                             <constraint firstItem="cdx-hh-aub" firstAttribute="trailing" secondItem="FHx-3o-f5p" secondAttribute="trailing" type="default" id="seH-EZ-VOO"/>
                         </constraints>
                     </view>
@@ -154,8 +188,32 @@
                 <relationship kind="action" name="launchCamera:"/>
             </relationships>
         </class>
+        <class className="ImagePickerController" superclassName="UICollectionViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ImagePickerController.h"/>
+            <relationships>
+                <relationship kind="action" name="addMoreImages:"/>
+                <relationship kind="action" name="cancel:"/>
+                <relationship kind="action" name="saveSelectedImages:"/>
+                <relationship kind="outlet" name="imageCollectionView" candidateClass="UICollectionView"/>
+            </relationships>
+        </class>
         <class className="NSLayoutConstraint" superclassName="NSObject">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="UICollectionReusableView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionReusableView.h"/>
+        </class>
+        <class className="UICollectionViewCell" superclassName="UICollectionReusableView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewCell.h"/>
+        </class>
+        <class className="UICollectionViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewController.h"/>
+        </class>
+        <class className="UICollectionViewFlowLayout" superclassName="UICollectionViewLayout">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewFlowLayout.h"/>
+        </class>
+        <class className="UICollectionViewLayout" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewLayout.h"/>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
