--- a/Codename CHOMPS/iPhoneMainStoryboard.storyboard
+++ b/Codename CHOMPS/iPhoneMainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="YNP-kX-WwT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C3012" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="YNP-kX-WwT">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -55,72 +55,6 @@
             </objects>
             <point key="canvasLocation" x="593" y="20"/>
         </scene>
-        <!--Image Picker Controller - Image Picker-->
-        <scene sceneID="Evf-JB-GIk">
-            <objects>
-                <viewController storyboardIdentifier="ImagePicker" title="Image Picker" id="bg7-mh-8EH" customClass="ImagePickerController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="NnM-zl-yGZ">
-                        <rect key="frame" x="0.0" y="64" width="320" height="460"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="44W-Pp-EsB">
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="yX1-NH-o3b">
-                                    <size key="itemSize" width="50" height="50"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="ZPJ-Bv-eFi">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        </view>
-                                    </collectionViewCell>
-                                </cells>
-                            </collectionView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="44W-Pp-EsB" firstAttribute="top" secondItem="NnM-zl-yGZ" secondAttribute="top" type="default" id="Fgr-Y4-Xpu"/>
-                            <constraint firstItem="44W-Pp-EsB" firstAttribute="leading" secondItem="NnM-zl-yGZ" secondAttribute="leading" type="default" id="IRb-tP-jab"/>
-                            <constraint firstItem="44W-Pp-EsB" firstAttribute="trailing" secondItem="NnM-zl-yGZ" secondAttribute="trailing" type="default" id="gMr-Se-B8G"/>
-                            <constraint firstItem="44W-Pp-EsB" firstAttribute="bottom" secondItem="NnM-zl-yGZ" secondAttribute="bottom" type="default" id="muY-Yb-Z9D"/>
-                        </constraints>
-                    </view>
-                    <toolbarItems>
-                        <barButtonItem style="done" systemItem="camera" id="l4Z-Jq-Sa4">
-                            <color key="tintColor" red="0.30914267921498906" green="0.50406952949829797" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            <connections>
-                                <action selector="addMoreImages:" destination="bg7-mh-8EH" id="EKL-a2-tRW"/>
-                            </connections>
-                        </barButtonItem>
-                    </toolbarItems>
-                    <navigationItem key="navigationItem" id="7Gk-Ye-8MM">
-                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="hVs-jJ-rH3">
-                            <connections>
-                                <action selector="cancel:" destination="bg7-mh-8EH" id="adB-MM-dkn"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="save" id="2Fd-Tf-jPv">
-                            <connections>
-                                <action selector="saveSelectedImages:" destination="bg7-mh-8EH" id="ZWy-am-Qdq"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="blackOpaque" prompted="NO"/>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics" barStyle="blackOpaque"/>
-                    <connections>
-                        <outlet property="imageCollectionView" destination="44W-Pp-EsB" id="9bp-p3-Qnk"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="NOa-GR-qGd" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1049" y="-644"/>
-        </scene>
         <!--Camera View Controller - Camera-->
         <scene sceneID="1Cc-Hl-sfs">
             <objects>
@@ -130,6 +64,9 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cdx-hh-aub">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="96" id="YkS-et-2Lu"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Done">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -151,12 +88,49 @@
                     </view>
                     <navigationItem key="navigationItem" id="TaL-V2-Axf"/>
                     <connections>
-                        <segue destination="bg7-mh-8EH" kind="modal" identifier="toImagePicker" modalTransitionStyle="flipHorizontal" id="Djz-aq-MEE"/>
+                        <segue destination="7vR-K8-0ug" kind="modal" identifier="toImagePicker" id="H6r-FD-OTH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Grm-DM-4pA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="593" y="-644"/>
+        </scene>
+        <!--Image Picker Controller-->
+        <scene sceneID="exB-xR-sav">
+            <objects>
+                <collectionViewController autoresizesArchivedViewToFullSize="NO" id="7vR-K8-0ug" customClass="ImagePickerController" sceneMemberID="viewController">
+                    <collectionView key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="xMz-eh-Bon">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="cXC-CK-4pS">
+                            <size key="itemSize" width="90" height="90"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" autoresizesSubviews="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" reuseIdentifier="image" id="ams-OZ-ixu">
+                                <rect key="frame" x="10" y="10" width="90" height="90"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="7vR-K8-0ug" id="l07-pD-e0o"/>
+                            <outlet property="delegate" destination="7vR-K8-0ug" id="IUj-qn-DTG"/>
+                        </connections>
+                    </collectionView>
+                    <connections>
+                        <outlet property="imageCollectionView" destination="xMz-eh-Bon" id="Ljc-3a-jBw"/>
+                    </connections>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="p7V-vc-cxt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1049" y="-644"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="hDV-eY-dT6">
@@ -179,7 +153,6 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/CameraViewController.h"/>
             <relationships>
                 <relationship kind="action" name="isDoneTakingPictures:"/>
-                <relationship kind="action" name="takePicture:"/>
             </relationships>
         </class>
         <class className="HomeViewController" superclassName="UITableViewController">
